# ezml

./: .gitignore  pyproject.toml
examples/mnist/: mnist_evaluator.py  simplemnist.py
examples/simple_numbers/: README.md  simple.py  simple_loading.py
ezml/: __init__.py  data.py  keras.py  layers.py  model_representation.py  prelude.py  sequential.py
ezml/dataset/: __init__.py  dataset.py  mnist.py
